test/spec_vectors/type-rec/ok/module_15.wat
(module (rec (type (struct)) (type $f2 (func))) (func (import "M" "f") (type $f2)))